# seefood-py

./: .env.example  .gitignore  README.md  config.example.toml  config.py  main.py  pyproject.toml  seefood.service
components/: camera.py  scale.py  tof.py
src/: config.py  main.py
src/api/: app.py  client.html
src/components/: camera.py  llm.py  scale.py  set_camera.sh  tof.py
src/testing/: test_client.py  test_server.py
